# octopus_engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindFMOD.cmake  FindHarfBuzz.cmake  FindSteamApi.cmake  FindSteam_Api.cmake
doc/: linux_build.md  scripting_type_annotations.lua  todo.txt
editor/: .gitignore  config.ini  editor.pro  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  map_view.cpp  map_view.hpp  property_editor.cpp  property_editor.hpp  test_tiled2.tmx  ui_main_window.h
editor/mappers/: image_layer_mapper.cpp  image_layer_mapper.hpp  layer_mapper.cpp  layer_mapper.hpp  map_mapper.cpp  map_mapper.hpp  map_object_mapper.cpp  map_object_mapper.hpp  object_layer_mapper.cpp  object_layer_mapper.hpp
include/: audio_player.hpp  base64.hpp  camera.hpp  canvas.hpp  canvas_renderer.hpp  canvas_updater.hpp  clock.hpp  collision_check_types.hpp  collision_record.hpp  command.hpp  command_result.hpp  commands.hpp  common.hpp  configurations.hpp  custom_shaders.hpp  direction.hpp  direction_utilities.hpp  editable.hpp  exceptions.hpp  game.hpp  image_layer.hpp  image_layer_renderer.hpp  image_layer_updater.hpp  key_binder.hpp  keypoint.hpp  layer.hpp  layer_renderer.hpp  layer_types.hpp  layer_updater.hpp  log.hpp  log_levels.hpp  lua_object.hpp  map.hpp  map_object.hpp  npc.hpp  object_layer.hpp  object_layer_renderer.hpp  object_layer_updater.hpp  pathfinder.hpp  player_controller.hpp  (+15 more)
include/canvas/: base_canvas.hpp  base_image_canvas.hpp  canvas.hpp  canvas_renderer.hpp  canvas_updater.hpp  image_canvas.hpp  sprite_canvas.hpp  text_canvas.hpp
include/commands/: command_result.hpp  fade_music_command.hpp  move_camera_command.hpp  move_canvas_command.hpp  move_object_command.hpp  move_object_to_command.hpp  shake_screen_command.hpp  show_pose_command.hpp  show_text_command.hpp  text_options.hpp  timed_command.hpp  tint_command.hpp  tint_screen_command.hpp  update_canvas_command.hpp  update_image_command.hpp  update_layer_command.hpp  update_layer_velocity_command.hpp  update_opacity_command.hpp  wait_command.hpp  zoom_command.hpp
include/decorators/: shake_decorator.hpp  typewriter_decorator.hpp
include/environments/: default_environment.hpp  environment.hpp  steam_environment.hpp
include/filesystem/: boost_filesystem.hpp  path_info.hpp  physfs_filesystem.hpp  readable_filesystem.hpp  standard_filesystem.hpp  user_data_folder.hpp  writable_filesystem.hpp
include/interfaces/: opacity_holder.hpp  sprite_holder.hpp
include/layers/: image_layer.hpp  layer.hpp  layer_renderer.hpp  layer_types.hpp  layer_updater.hpp  object_layer.hpp  object_layer_renderer.hpp  tile_layer_renderer.hpp
include/map/: collision_check_types.hpp  collision_record.hpp  map.hpp  map_object.hpp  tileset.hpp
include/scripting/: lua_object.hpp  script_bindings.hpp  scripting_interface.hpp
include/tests/: game_fixture.hpp
include/utility/: color.hpp  direction.hpp  file.hpp  math.hpp  string.hpp  xml.hpp
include/xd/: asset_manager.hpp  asset_serializer.hpp  audio.hpp  config.hpp  entity.hpp  event_bus.hpp  exception.hpp  factory.hpp  glm.hpp  graphics.hpp  lua.hpp  ref_counted.hpp  system.hpp  types.hpp
linux/: Makefile
osx/: .gitignore
src/: Editable.cpp  audio_player.cpp  base64.cpp  camera.cpp  canvas.cpp  canvas_renderer.cpp  canvas_updater.cpp  clock.cpp  clock.hpp  collision_record.cpp  command.cpp  command_result.cpp  commands.cpp  configurations.cpp  configurations.hpp  custom_shaders.cpp  custom_shaders.hpp  direction.hpp  game.cpp  game.hpp  image_layer.cpp  image_layer_renderer.cpp  image_layer_updater.cpp  key_binder.cpp  layer.cpp  layer_renderer.cpp  log.cpp  lua_object.cpp  main.cpp  map.cpp  map_object.cpp  npc.cpp  object_layer.cpp  object_layer_renderer.cpp  object_layer_updater.cpp  pathfinder.cpp  player_controller.cpp  save_file.cpp  scripting_interface.cpp  shake_decorator.cpp  (+11 more)
src/canvas/: base_canvas.cpp  base_canvas.hpp  base_image_canvas.cpp  base_image_canvas.hpp  canvas.cpp  canvas_renderer.cpp  canvas_renderer.hpp  canvas_updater.cpp  image_canvas.cpp  sprite_canvas.cpp  sprite_canvas.hpp  text_canvas.cpp  text_canvas.hpp
src/commands/: command.cpp  command_result.cpp  fade_music_command.cpp  fade_music_command.hpp  move_camera_command.cpp  move_canvas_command.cpp  move_object_command.cpp  move_object_to_command.cpp  shake_screen_command.cpp  show_pose_command.cpp  show_text_command.cpp  show_text_command.hpp  (+17 more)
win/: .gitignore  config.ini  octopus_engine.aps  octopus_engine.rc  octopus_engine.sln  octopus_engine.vcxproj  octopus_engine.vcxproj.filters  resource.h  test.runsettings
(+247 files in other folders)
